--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <body>
+        <head>
+            <title>CatPhotoApp</title>
+            <meta charset="UTF-8">
+        </head>
         <main>
             <h1>CatPhotoApp</h1>
             <section>
@@ -38,18 +43,30 @@
                 <form action="https://freecatphotoapp.com/submit-cat-photo">
                         <fieldset>
                             <legend>Is your cat an indoor or outdoor cat?</legend>
-                            <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor">Indoor</label>
+                            <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked>Indoor</label>
                             <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
                         </fieldset>
 
                         <fieldset>
                             <legend>What's your cat's personality?</legend>
-                            <label><input type="checkbox" id="loving"></label>
+
+                            <input type="checkbox" id="loving" name="personality" value="loving" checked>
+                            <label for="loving">Loving</label>
+
+                            <input type="checkbox" id="lazy" name="personality" value="lazy">
+                            <label for="lazy">Lazy</label>
+
+                            <input type="checkbox" id="energetic" name="personality" value="energetic">
+                            <label for="energetic">Energetic</label>
+
                         </fieldset>
                     <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                     <button type="submit">Submit</button>
                 </form>
             </section>
         </main>
+        <footer>
+            <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p>
+        </footer>
     </body>
 </html>
